# timetrax

./: .gitignore  Cargo.toml  README.md  TODOS.md  flake.nix
src/: az_hash.rs  lib.rs  main.rs
src/cli/: activity.rs  class.rs  completion.rs  hash.rs  json_output.rs  mod.rs  pop.rs  project.rs  push.rs  quota.rs  status.rs  time_input.rs
src/command/: class.rs  mod.rs  pop.rs  project.rs  push.rs  status.rs
src/data/: activity.rs  activity_class.rs  activity_closure.rs  app_config.rs  blocker.rs  day.rs  dirty.rs  identifier.rs  interval.rs  job_config.rs  local_time.rs  manager.rs  mod.rs  project.rs  quota.rs  week_quota.rs
src/serde/: mod.rs  pretty_duration.rs  pretty_time.rs  pretty_time_option.rs
