[package]
name = "timetrax"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
itertools = "0.14.0"
log = { version = "0.4.28", features = ["std", "serde"] }
ratatui = {version = "0.29.0", optional= true}
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["local-offset", "serde", "serde-human-readable"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
test-log = "0.2.18"