[package]
name = "timetrax"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
itertools = "0.14"
log = { version = "0.4", features = ["std", "serde"] }
ratatui = {version = "0.30", optional= true}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
sha2 = "0.11"
time = { version = "0.3", features = ["local-offset", "serde", "serde-human-readable"] }
uuid = { version = "1.23", features = ["serde", "v4"] }
regex = "1.12"
clap_complete = "4.6"
digest = "0.11"

[dev-dependencies]
test-log = "0.2"
